2009-09-16:  Added new functions:

               * sygv

             Thanks to Christophe Troestler <Christophe.Troestler@umh.ac.be>
             for contributing sygv!

               * orgqr
               * lauum

             Added example for QR-factorization.

2009-09-09:  Fixed a few performance bugs.

             Some matrix and vector types were polymorphic, thus
             leading to much worse element access speed.

             Improved compiler selection in Makefile.

             Improved some matrix operations.

             Added new function:

               * Mat.transpose_copy

2009-06-13:  Added new function:

               * Mat.as_vec

2009-06-12:  Added new function:

               * tbtrs  (all numbers)

             Thanks to Sam Ehrlichman <sehrlichman@janestreet.com>
             for contributing the patch!

2009-06-07:  Added workaround for OCaml performance bug wrt. bigarray
             access.  This should make OCaml code perform much faster when
             accessing or modifying bigarrays directly.

             Changed API for Mat.scal_cols by swapping matrix and vector
             argument.

2009-06-01:  New vector functions:

               * Vec.sqrt  (compute square roots of a vector)
               * Vec.sqr   (compute squares of a vector)

2009-05-30:  Major overhaul:

             Fixed too liberal transpose parameters in several
             functions.  The conjugate transpose was not available
             in some.

             Make convenience definitions for pp_num, pp_vec, pp_mat
             available on opening Lacaml.Impl.{S,D,C,Z} to be able
             to print more generically.

             Added new functions:

               * dotu  (only for complex numbers)
               * dotc  (only for complex numbers)
               * ger   (all numbers)
               * lassq
               * Mat.syrk_trace
               * Mat.symm2_trace
