@@ -1,3 +1,7 @@
+2009-09-21:  Added new functions:
+
+               * ormqr
+
 2009-09-16:  Added new functions:
 
                * sygv
